--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="no_connection">No internet connections available</string>
+    <string name="no_connection">אין חיבור לאינטרנט אנא נסו שוב</string>
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
@@ -15,11 +15,23 @@
     <string name="other">Other</string>
     <string name="closest">Closest</string>
     <string name="map">Map</string>
+    <string name="wrong_title">שדה הכותרת הוא חובה.</string>
+    <string name="wrong_address">שדה הכתובת הוא חובה.</string>
+    <string name="wrong_phone">שדה המס טלפון הוא חובה.</string>
+    <string name="wrong_info">שדה פרטים הוא חובה.</string>
+    <string name="wrong_subject">אנא בחר קטגוריה בבקשה</string>
+    <string name="accept">אישור</string>
+    <string name="cancel">ביטול</string>
+    <string name="login">אנא התחבר על מנת להמשיך</string>
     <string-array name="titles">
         <item>Adopt</item>
         <item>Lost Found</item>
         <item>Tips</item>
         <item>Parks</item>
         <item>Veterinars</item>
+    </string-array>
+
+    <string-array name="icons">
+
     </string-array>
 </resources>
