--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,15 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="save">שומר את הפארק...</string>
+    <string name="address">כתובת</string>
+    <string name="title">כותרת</string>
+    <string name="wrong_title">שדה הכותרת הוא חובה.</string>
+    <string name="wrong_address">שדה הכתובת הוא חובה.</string>
+    <string name="wrong_phone">שדה המס טלפון הוא חובה.</string>
+    <string name="wrong_info">שדה תמונות הוא חובה.</string>
+    <string name="wrong_subject">אנא בחר קטגוריה בבקשה</string>
+    <string name="accept">אישור</string>
+    <string name="cancel">ביטול</string>
+    <string name="login">אנא התחבר על מנת להמשיך</string>
 </resources>
